--- a/index.mdx
+++ b/index.mdx
@@ -5,9 +5,9 @@ description: "Welcome to the new home for your documentation"
 
 ## Setting up
 
-Get your documentation site up and running in minutes. BeRocker!
+Get your documentation site up and running in minutes.
 
-<Card title="Start here" icon="rocket" href="/quickstart" horizontal>
+<Card title="Start here" icon="rocket" horizontal href="/quickstart">
   Follow our three step quickstart guide.
 </Card>
 
