Migrating from lovable

--- a/index.mdx
+++ b/index.mdx
@@ -1,56 +1,64 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: BeRocker Knowledge Base
 ---
 
-## Setting up
+# Welcome to BeRocker Docs
 
-Get your documentation site up and running in minutes.
+BeRocker is the all-in-one CRM built for auto transport brokers.  
+Here, you’ll find everything you need to **get started, configure your integrations, and manage your business** with BeRocker.
 
-<Card title="Start here" icon="rocket" horizontal href="/quickstart">
-  Follow our three step quickstart guide.
-</Card>
+---
 
-## Make it yours
+## Quick Start
 
-Design a docs site that looks great and empowers your users.
+- [Quickstart Guide](/quickstart) – Set up your BeRocker CRM in minutes
 
-<Columns cols={2}>
-  <Card title="Edit locally" icon="pen-to-square" href="/development">
-    Edit your docs locally and preview them in real time.
-  </Card>
-  <Card title="Customize your site" icon="palette" href="/essentials/settings">
-    Customize the design and colors of your site to match your brand.
-  </Card>
-  <Card title="Set up navigation" icon="map" href="/essentials/navigation">
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card title="API documentation" icon="terminal" href="/api-reference/introduction">
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
+---
 
-## Create beautiful pages
+## Setup & Configuration
 
-Everything you need to create world-class documentation.
+- [Profile Settings](/general-settings/profile-settings-in-berocker-crm)
+- [Business Info](/general-settings/business-info)
+- [Add and Configure Team Members](/general-settings/add-and-configure-team-members-in-berocker-crm)
+- [Add a New Lead Source](/general-settings/add-a-new-lead-source-in-berocker-app)
+- [Choose Your Tools](/general-settings/choose-your-tools)
 
-<Columns cols={2}>
-  <Card title="Write with MDX" icon="pen-fancy" href="/essentials/markdown">
-    Use MDX to style your docs pages.
-  </Card>
-  <Card title="Code samples" icon="code" href="/essentials/code">
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card title="Images" icon="image" href="/essentials/images">
-    Display images and other media.
-  </Card>
-  <Card title="Reusable snippets" icon="recycle" href="/essentials/reusable-snippets">
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
+---
 
-## Need inspiration?
+## Communications
 
-<Card title="See complete examples" icon="stars" href="https://mintlify.com/customers">
-  Browse our showcase of exceptional documentation sites.
-</Card>
+- [Set Up Contact Channels for Calls, SMS, and Email](/set-up-contact-channels-for-calls-sms-and-email)
+- [Add RingCentral Phone Numbers](/add-ring-central-phone-numbers)
+- [Configure Twilio](/how-to-configure-twilio)
+- [Configure OpenPhone](/how-to-configure-openphone-in-berocker-settings)
+
+---
+
+## Email Integrations
+
+- [Configure Mailgun](integrations/email/mailgun/how-to-configure-mailgun-in-berocker-settings)
+- [Configure SendGrid](integrations/email/sendgrid/how-to-configure-sendgrid-api-key-in-berocker-settings)
+
+---
+
+## Load Boards
+
+- [Configure Central Dispatch User Settings](/integrations/loadboards/configure-central-dispatch-user-settings-in-berocker-crm)
+- [Configure Super Dispatch API](integrations/loadboards/how-to-configure-super-dispatch-api-integration-settings)
+
+---
+
+## Payments
+
+- [Set Up Stripe Integration](/integrations/payment/how-to-set-up-stripe-integration)
+- [Set Up Square Integration](/integrations/payment/how-to-set-square-integration)
+- [Set Up Zelle Integration](/integrations/payment/how-to-set-up-zelle-integration-in-berocker)
+- [Set Up Authorize.Net Integration](/integrations/payment/set-up-authorize-net-integration-in-berocker)
+- [Configure RevitPay Settings](/integrations/payment/how-to-configure-revitpay-settings-in-berocker)
+
+---
+
+## Need Help?
+
+If you can’t find what you’re looking for, reach out to our support team directly inside BeRocker CRM.  
+We’re here to help you succeed.
