--- a/integrations/phone/telnyx/telnyx-account-verification.mdx
+++ b/integrations/phone/telnyx/telnyx-account-verification.mdx
@@ -1,7 +1,6 @@
 ---
-title: "Telnyx Account Setup & Team Management"
+title: "Telnyx - Account Setup & Team Management"
 description: "Complete guide to verifying your Telnyx account and managing team members with the right roles."
-icon: "book"
 ---
 
 ---
