--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,80 +1,76 @@
 ---
-title: "Quickstart"
-description: "Start building awesome documentation in minutes"
+title: Quickstart
 ---
 
-## Get started in three steps
+# 🚀 Quickstart Guide
 
-Get your documentation site running locally and make your first customization.
+Welcome to **BeRocker CRM** – your all-in-one platform for managing auto transport leads, dispatches, communications, and payments.  
+Follow this guide to get up and running in just a few minutes.
 
-### Step 1: Set up your local environment
+---
 
-<AccordionGroup>
-  <Accordion icon="copy" title="Clone your docs locally">
-    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your [dashboard](https://dashboard.mintlify.com).
-    
-    To clone the repository locally so that you can make and preview changes to your docs, follow the [Cloning a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository) guide in the GitHub docs.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Start the preview server">
-    1. Install the Mintlify CLI: `npm i -g mint`
-    2. Navigate to your docs directory and run: `mint dev`
-    3. Open `http://localhost:3000` to see your docs live!
-    
-    <Tip>Your preview updates automatically as you edit files.</Tip>
-  </Accordion>
-</AccordionGroup>
+## 1. Sign In
 
-### Step 2: Deploy your changes
+- Go to [app.berocker.com](https://app.berocker.com)
+- Log in with your BeRocker account credentials
 
-<AccordionGroup>
-  <Accordion icon="github" title="Install our GitHub app">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
-    
-    Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
-</Accordion>
-<Accordion icon="palette" title="Update your site name and colors">
-    For a first change, let's update the name and colors of your docs site.
+---
 
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
+## 2. Set Up Your Profile
 
-    <Tip>Try changing the primary color to see an immediate difference!</Tip>
-  </Accordion>
-</AccordionGroup>
+- Complete your [Profile Settings](/general-settings/profile-settings-in-berocker-crm)
+- Add your [Business Info](/general-settings/business-info)
 
-### Step 3: Go live
+---
 
-<Accordion icon="rocket" title="Publish your docs">
-  1. Commit and push your changes.
-  2. Your docs will update and be live in moments!
-</Accordion>
+## 3. Add Your Team
 
-## Next steps
+- Invite and configure [Team Members](/general-settings/add-and-configure-team-members-in-berocker-crm)
+- Assign roles and permissions
 
-Now that you have your docs running, explore these key features:
+---
 
-<CardGroup cols={2}>
+## 4. Connect Your Communication Tools
 
-<Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
-  Learn MDX syntax and start writing your documentation.
-</Card>
+- Pick your preferred phone and messaging providers:
+  - [Twilio](/integrations/phone/how-to-configure-twilio)
+  - [RingCentral](/integrations/phone//add-ring-central-phone-numbers)
+- Set up [SMS/Email Channels](/general-settings/set-up-contact-channels-for-calls-sms-and-email)
 
-<Card title="Customize style" icon="palette" href="/essentials/settings">
-  Make your docs match your brand perfectly.
-</Card>
+---
 
-<Card title="Add code examples" icon="square-code" href="/essentials/code">
-  Include syntax-highlighted code blocks.
-</Card>
+## 5. Connect Your Email
 
-<Card title="API documentation" icon="code" href="/api-reference/introduction">
-  Auto-generate API docs from OpenAPI specs.
-</Card>
+- [Mailgun](/integrations/email/mailgun/how-to-configure-mailgun-in-berocker-settings)
+- [SendGrid](/integrations/phone/sendgrid/how-to-configure-sendgrid-api-key-in-berocker-settings)
 
-</CardGroup>
+---
 
-<Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
-</Note>
+## 6. Connect Your Load Boards
+
+- [Central Dispatch](/integrations/loadboards/configure-central-dispatch-user-settings-in-berocker-crm)
+- [Super Dispatch](/integrations/loadboards/how-to-configure-super-dispatch-api-integration-settings)
+
+---
+
+## 7. Set Up Payments
+
+- Choose your payment method:
+  - [Stripe](/integrations/payment/how-to-set-up-stripe-integration)
+  - [Square](/integrations/payment/how-to-set-square-integration)
+  - [Zelle](/integrations/payment/how-to-set-up-zelle-integration-in-berocker)
+  - [Authorize.Net](/integrations/payment/set-up-authorize-net-integration-in-berocker)
+  - [RevitPay](/integrations/payment/how-to-configure-revitpay-settings-in-berocker)
+
+---
+
+## 🎉 You’re Ready!
+
+Once your tools are connected, you can:
+
+- Start importing leads
+- Manage quotes and dispatches
+- Track communications in one place
+- Collect payments seamlessly
+
+👉 Explore the rest of the docs to master every feature.
