--- a/index.mdx
+++ b/index.mdx
@@ -2,10 +2,10 @@
 title: BeRocker Knowledge Base
 ---
 
-# Welcome to BeRocker Docs
+# Welcome to BeRocker!
 
 BeRocker is the all-in-one CRM built for auto transport brokers.  
-Here, you’ll find everything you need to **get started, configure your integrations, and manage your business** with BeRocker.
+Here, you’ll find everything you need to **get started, configure your integrations, and manage your business** with BeRocker CRM.
 
 ---
 
