--- a/integrations/loadboards/configure-central-dispatch.mdx
+++ b/integrations/loadboards/configure-central-dispatch.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Configure Central Dispatch User Settings in BeRocker CRM"
+title: "Configuring Central Dispatch"
 category: "BeRocker CRM settings"
 published: true
 order: 1
