--- a/integrations/loadboards/configure-super-dispatch.mdx
+++ b/integrations/loadboards/configure-super-dispatch.mdx
@@ -1,5 +1,5 @@
 ---
-title: "How To Configure Super Dispatch API Integration Settings"
+title: "Configuring Super Dispatch"
 category: "BeRocker CRM settings"
 published: true
 order: 2
