--- a/integrations/phone/vonage-add-user.mdx
+++ b/integrations/phone/vonage-add-user.mdx
@@ -1,9 +1,17 @@
+---
+title: "Add user in Vonage API dashboard"
+---
+
 # How to add a developer to Vonage account
 
 ## 1. Login to your Vonage account - Communications APIs
 
-![enter image description here](https://ik.imagekit.io/eb3ojgqcp/Screenshot%202025-08-20%20at%2012.20.25%20PM.png?updatedAt=1755745777183)
+![enter image description here](/images/vonage-1.png)
 
 ## 2. Go to Home page and click on "Invite your team"
 
-![enter image description here](https://ik.imagekit.io/eb3ojgqcp/VonageSetup/Screenshot%202025-08-20%20at%2012.19.39%20PM.png?updatedAt=1755745956018)
+![enter image description here](/images/vonage-2.png)
+
+## 3. Add a user with the following permissions
+
+![enter image description here](/images/vonage-3.png)
