Fixed vonage user add article images

--- a/integrations/phone/vonage-add-user.mdx
+++ b/integrations/phone/vonage-add-user.mdx
@@ -6,12 +6,12 @@ title: "Add user in Vonage API dashboard"
 
 ## 1. Login to your Vonage account - Communications APIs
 
-![enter image description here](/vonage/images/vonage-1.png)
+![enter image description here](/images/vonage/vonage-1.png)
 
 ## 2. Go to Home page and click on "Invite your team"
 
-![enter image description here](/ivonage/mages/vonage-2.png)
+![enter image description here](/images/vonage/vonage-2.png)
 
 ## 3. Add a user with the following permissions
 
-![enter image description here](/vonage/images/vonage-3.png)
+![enter image description here](/images/vonage/vonage-3.png)
