Added process flow image to the index

--- a/index.mdx
+++ b/index.mdx
@@ -57,6 +57,12 @@ Here, you’ll find everything you need to **get started, configure your integra
 
 ---
 
+---
+
+## Process flow of leads in BeRocker CRM
+
+![process-flow](/images/process-flow.png)
+
 ## Need Help?
 
 If you can’t find what you’re looking for, reach out to our support team directly inside BeRocker CRM.  
