Added process flow pdf to the index

--- a/index.mdx
+++ b/index.mdx
@@ -63,6 +63,8 @@ Here, you’ll find everything you need to **get started, configure your integra
 
 ![process-flow](/images/process-flow.png)
 
+[View PDF version](/documents/process-flow.pdf)
+
 ## Need Help?
 
 If you can’t find what you’re looking for, reach out to our support team directly inside BeRocker CRM.  
