--- a/essentials/lead-sources.mdx
+++ b/essentials/lead-sources.mdx
@@ -1,125 +1,145 @@
 ---
 title: "Adding Lead Source"
-description: "Description of your new file."
+description: "How to connect a new lead source to BeRocker CRM"
 ---
 
-# Integration with the BeRocker CRM
+# Adding a Lead Source to BeRocker CRM
 
-This documentation explains how to send POST requests to deliver leads to the BeRocker CRM system. Please follow the instructions below carefully to ensure that your leads are processed correctly.
+This guide explains how to connect your lead provider or website form to **BeRocker CRM** by sending `POST` requests. Follow the steps carefully to ensure your leads are captured correctly.
 
-## 1. Credentials and Endpoint URL
+---
 
-Head over to the **BeRocker CRM Settings -\> BeRocker AI -\> Lead Sources** There you can click on the **Add new source** button and enter your new lead source details. _For example: Name: Main Website_
+## 1. Create a Lead Source & Get Endpoint URL
 
-Once saved, look at the **URLs** column of the table and click on Copy icon of the newly created lead source. 
+<Steps>
+  ### Step 1 — Navigate
 
-![Lead Source Copy](/images/lead-source-copy.png)
+  Go to **Settings → Lead Management → Lead Sources** in your BeRocker CRM.
 
-Keep in mind that when creating a new lead source, the only required field is the name. Everything else is optional. However, I would like to mention what other fields refer to as well. _Plan Name_ - this is for connecting with lead source providers. They usually establish certain plans for sending over leads. That info can be entered in this field _Price_ - also related to lead source providers where there is a price for each incoming lead
+  ### Step 2 — Add New Source
+
+  Click **Add New Source** and give it a name (e.g., `Main Website`).
+
+  - **Required:** Name
+  - **Optional:**  (Only when connecting with Lead Source Provider)
+    - **Plan Name** — If your lead provider specifies a plan
+    - **Price** — If your provider charges per lead
+
+  ### Step 3 — Copy Endpoint URL
+
+  After saving, copy the **Endpoint URL** from the **URLs** column using the copy icon.
+
+  ![Lead Source Copy](/images/lead-source-copy.png)
+</Steps>
+
+---
 
 ## 2. Request Headers
 
-When sending a POST request, make sure to include the following headers:
+When sending a `POST` request, include the following header:
 
-```json
+```http
 Content-Type: application/json
 ```
 
-## 3. JSON Data Format
+## 3. JSON Payload Structure to follow
 
-General Format (For CRM Systems like MessagePlan, BATS)
-
-For most lead providers, use the following JSON structure:
+Most lead providers (e.g., MessagePlan, BATS) require this format:
 
 ```json
 {
-  "first_name": "string",
-  "last_name": "string",
+  "first_name": "John",
+  "last_name": "Doe",
   "email": "user@example.com",
   "phone": "5551234567",
-  "origin_city": "string",
-  "origin_state": "string",
-  "origin_postal_code": "12345",
-  "destination_city": "string",
-  "destination_state": "string",
-  "destination_postal_code": "54321",
+  "origin_city": "Los Angeles",
+  "origin_state": "CA",
+  "origin_postal_code": "90001",
+  "destination_city": "Miami",
+  "destination_state": "FL",
+  "destination_postal_code": "33101",
   "vehicles": [
     {
       "vehicle_model_year": 2020,
-      "vehicle_make": "string",
-      "vehicle_model": "string",
-      "vehicle_inop": true,
+      "vehicle_make": "Toyota",
+      "vehicle_model": "Camry",
+      "vehicle_inop": false,
       "vehicle_type": "Car"
     }
   ],
   "ship_date": "2025-03-27",
   "transport_type": "open",
-  "comment_from_shipper": "string"
+  "comment_from_shipper": "Please call after 5 PM"
 }
 ```
 
-## 4. Example Request for General Format
+## 4. Example Request
 
 ```json
-curl 
--X POST "https://your-endpoint-url"
--H "Content-Type: application/json" 
--d `{
-  "first_name": "string",
-  "last_name": "string",
+curl -X POST "https://your-endpoint-url" \
+-H "Content-Type: application/json" \
+-d '{
+  "first_name": "John",
+  "last_name": "Doe",
   "email": "user@example.com",
   "phone": "5551234567",
-  "origin_city": "string",
-  "origin_state": "string",
-  "origin_postal_code": "12345",
-  "destination_city": "string",
-  "destination_state": "string",
-  "destination_postal_code": "54321",
+  "origin_city": "Los Angeles",
+  "origin_state": "CA",
+  "origin_postal_code": "90001",
+  "destination_city": "Miami",
+  "destination_state": "FL",
+  "destination_postal_code": "33101",
   "vehicles": [
     {
       "vehicle_model_year": 2020,
-      "vehicle_make": "string",
-      "vehicle_model": "string",
-      "vehicle_inop": true,
+      "vehicle_make": "Toyota",
+      "vehicle_model": "Camry",
+      "vehicle_inop": false,
       "vehicle_type": "Car"
     }
   ],
   "ship_date": "2025-03-27",
   "transport_type": "open",
-  "comment_from_shipper": "string"
-}`
+  "comment_from_shipper": "Please call after 5 PM"
+}'
 ```
 
-**5. Server Response**
+## 5. Server Responses
 
 **Successful Submission:** The server will return an HTTP status 200 OK along with a JSON response confirming the lead receipt.
 
-• **Error Handling:** In case of errors, the server may return:
+•	**Error Handling:** In case of errors, the server may return:
 
-• 400 Bad Request — Incorrect request format.
+•	400 Bad Request — Incorrect request format.
 
-• 401 Unauthorized — Authentication issues.
+•	401 Unauthorized — Authentication issues.
 
-• Other HTTP error codes along with an appropriate error message.
+•	Other HTTP error codes along with an appropriate error message.
 
-**Vehicle Types**
+## 6. Accepted vehicle type values
 
-- `sedan`
-- `Car`
-- `Boat`
-- `Motorcycle`
-- `Pickup`
-- `pickup_2_doors`
-- `SUV`
-- `Van`
-- `RV`
-- `Travel Trailer`
-- `ATV`
-- `Convertible`
-- `Coupe`
-- `Other`
+```bash
+sedan
+Car
+Boat
+Motorcycle
+Pickup
+pickup_2_doors
+SUV
+Van
+RV
+Travel Trailer
+ATV
+Convertible
+Coupe
+Other
+```
 
-**Transport types**
+## 7. Accepted Transport Types
 
-- `open`
-- `enclosed`
+```bash
+open
+enclosed
+```
+
+<Note type="tip">✅ That’s it! You’re now ready to send leads directly into BeRocker CRM.</Note>
