Documentation edits made through Mintlify web editor

--- a/general-settings/lead-sources.mdx
+++ b/general-settings/lead-sources.mdx
@@ -1,13 +1,9 @@
 ---
 title: "Adding Lead Source"
-description: "How to connect a new lead source to BeRocker CRM"
+description: "Adding a Lead Source to BeRocker CRM"
 ---
-
-# Adding a Lead Source to BeRocker CRM
 
 This guide explains how to connect your lead provider or website form to **BeRocker CRM** by sending `POST` requests. Follow the steps carefully to ensure your leads are captured correctly.
-
----
 
 ## 1. Create a Lead Source & Get Endpoint URL
 
@@ -142,4 +138,6 @@ open
 enclosed
 ```
 
-<Note type="tip">✅ That’s it! You’re now ready to send leads directly into BeRocker CRM.</Note>
+<Note>
+  ✅ That’s it! You’re now ready to send leads directly into BeRocker CRM.
+</Note>
