Documentation edits made through Mintlify web editor

--- a/general-settings/lead-sources.mdx
+++ b/general-settings/lead-sources.mdx
@@ -8,8 +8,8 @@ This guide explains how to connect your lead provider or website form to **BeRoc
 ## 1. Create a Lead Source & Get Endpoint URL
 
 <Steps>
-  ### Step 1 — Navigate
-
+  ### Step 1 — Settings page
+  
   Go to **Settings → Lead Management → Lead Sources** in your BeRocker CRM.
 
   ### Step 2 — Add New Source
