Documentation edits made through Mintlify web editor

--- a/general-settings/lead-sources.mdx
+++ b/general-settings/lead-sources.mdx
@@ -37,6 +37,8 @@ When sending a `POST` request, include the following header:
 Content-Type: application/json
 ```
 
+<Note type="info"> Since your CRM account generates a **unique URL for each lead source**, basic authentication is already built in. You don’t need to provide additional credentials — simply use the provided URL. </Note>
+
 ## 3. JSON Payload Structure to follow
 
 Most lead providers (e.g., MessagePlan, BATS) require this format:
