Added layout description screenshots

--- a/general-settings/manage-templates.mdx
+++ b/general-settings/manage-templates.mdx
@@ -4,12 +4,25 @@ Your dashboard allows you to control all the message templates that are automati
 
 ---
 
+### Enterprise version templates
+
 <iframe
-  className="w-full aspect-video rounded-xl"
-  src="https://www.youtube.com/embed/svwj98Ey_d8"
-  title="YouTube video player"
-  frameBorder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  className='w-full aspect-video rounded-xl'
+  src='https://www.youtube.com/embed/svwj98Ey_d8'
+  title='YouTube video player'
+  frameBorder='0'
+  allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture'
+  allowFullScreen
+></iframe>
+
+### Standard version templates
+
+<iframe
+  className='w-full aspect-video rounded-xl'
+  src='https://www.youtube.com/embed/Mb5R5HLLzGo'
+  title='YouTube video player'
+  frameBorder='0'
+  allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture'
   allowFullScreen
 ></iframe>
 
