--- a/integrations/email/sendgrid/sendgrid-setup.mdx
+++ b/integrations/email/sendgrid/sendgrid-setup.mdx
@@ -1,25 +1,25 @@
-import { Steps, Step } from "@mintlify/components";
+import { Steps, Step } from '@mintlify/components';
 
 Setting up SendGrid requires three main steps: **Registering your account, Authenticating your domain, and Generating an API key**. Follow this guide to complete each stage.
 
 ---
 
-## 1. Register for SendGrid
+## 1. Register for SendGrid Account
 
 <Steps>
-  <Step title="Go to the Sign-Up Page">
+  <Step title='Go to the Sign-Up Page'>
     Visit [SendGrid Sign-Up](https://signup.sendgrid.com/). Choose **Domain Authentication**
     (recommended for businesses).
   </Step>
-  <Step title="Create Your Account">
+  <Step title='Create Your Account'>
     Enter your **name, company name, email, and password**. Agree to the terms and click **Create
     Account**.
   </Step>
-  <Step title="Confirm Your Email">
+  <Step title='Confirm Your Email'>
     Check your inbox for a **SendGrid verification email**. Click the verification link to activate
     your account.
   </Step>
-  <Step title="Log In to Dashboard">
+  <Step title='Log In to Dashboard'>
     After confirming, log in at [SendGrid Dashboard](https://app.sendgrid.com/). You’re now ready to
     set up domain authentication.
   </Step>
@@ -35,22 +35,22 @@ Additional articles: [Official: How to Create a SendGrid Account
 Domain authentication ensures your emails are trusted and not flagged as spam. It also removes the “via sendgrid.net” label from your messages.
 
 <Steps>
-  <Step title="Navigate to Sender Authentication">
+  <Step title='Navigate to Sender Authentication'>
     In the left sidebar, go to **Settings → Sender Authentication**.
   </Step>
-  <Step title="Start Domain Authentication">
+  <Step title='Start Domain Authentication'>
     Click **Get Started** under **Domain Authentication**. Enter your **domain name** (e.g.,
     `yourcompany.com`).
   </Step>
-  <Step title="Select DNS Host">
+  <Step title='Select DNS Host'>
     Choose your DNS provider (e.g., Cloudflare, GoDaddy, Google Domains). If not listed, select
     **Other Host (Manual Setup)**.
   </Step>
-  <Step title="Add DNS Records">
+  <Step title='Add DNS Records'>
     SendGrid will generate **CNAME records**. Copy and paste these into your DNS provider’s
     settings. Wait up to 24–48 hours for propagation.
   </Step>
-  <Step title="Verify Domain">
+  <Step title='Verify Domain'>
     Go back to the SendGrid dashboard and click **Verify**. Once successful, your domain will show
     as **Authenticated**.
   </Step>
@@ -63,16 +63,16 @@ Domain authentication ensures your emails are trusted and not flagged as spam. I
 An API key is required for integration with applications (e.g., CRMs, servers, or custom apps).
 
 <Steps>
-  <Step title="Go to API Keys">From the left sidebar, click **Settings → API Keys**.</Step>
-  <Step title="Create API Key">
+  <Step title='Go to API Keys'>From the left sidebar, click **Settings → API Keys**.</Step>
+  <Step title='Create API Key'>
     Click **Create API Key** and give it a clear name (e.g., “Production Mail”).
   </Step>
-  <Step title="Set Permissions">
+  <Step title='Set Permissions'>
     - **Full Access**: Grants all permissions (not recommended unless required). - **Restricted
     Access**: Recommended — select only what you need, e.g., **Mail Send**. - **Read Access**:
     View-only.
   </Step>
-  <Step title="Save the Key">
+  <Step title='Save the Key'>
     Click **Create & View**. Copy the key immediately (example: `SG.xxxxx.yyyyy`). Store it securely
     in environment variables or a secret manager.
   </Step>
@@ -85,19 +85,19 @@ An API key is required for integration with applications (e.g., CRMs, servers, o
 ## 4. Connect SendGrid to BeRocker
 
 <Steps>
-  <Step title="Open BeRocker Dashboard">
+  <Step title='Open BeRocker Dashboard'>
     Log in to your [BeRocker Dashboard](https://app.berocker.com).
   </Step>
-  <Step title="Go to Integrations">
+  <Step title='Go to Integrations'>
     Navigate to **Settings → Integrations** from the sidebar menu.
   </Step>
-  <Step title="Configure SendGrid">
+  <Step title='Configure SendGrid'>
     Locate the **SendGrid integration** item. Click **Configure** to open the setup window.
   </Step>
-  <Step title="Add API Key">
+  <Step title='Add API Key'>
     Paste your generated SendGrid API key into the **API Key** field. Set the status to **Active**.
   </Step>
-  <Step title="Apply Changes">
+  <Step title='Apply Changes'>
     Click **Apply** to save your configuration. Your BeRocker system will now send emails using your
     authenticated SendGrid account.
   </Step>
