Added steps for onboarding

--- a/onboarding/steps/step1.mdx
+++ b/onboarding/steps/step1.mdx
@@ -1,11 +1,11 @@
 ---
-title: 'Main Layout of the CRM'
+title: 'STEP 1: Get familiar with the CRM layout'
 ---
 
-![Main Layout](/images/layouts/main-layout.png)
-
 <AccordionGroup>
-  <Accordion title='Main Layout'>![Main Layout](/images/layouts/main-layout.png)</Accordion>
+  <Accordion defaultOpen='true' title='Main Layout'>
+    ![Main Layout](/images/layouts/main-layout.png)
+  </Accordion>
   <Accordion title='Chats panel'>![Main Layout](/images/layouts/chats-layout.png)</Accordion>
   <Accordion title='Chat window'>![Main Layout](/images/layouts/chat-window-layout.png)</Accordion>
   <Accordion title='Lead Information panel'>
@@ -24,3 +24,14 @@ title: 'Main Layout of the CRM'
     ![Main Layout](/images/layouts/carrier-after-posting-layout.png)
   </Accordion>
 </AccordionGroup>
+
+### Journey of a lead in BeRocker CRM
+
+<iframe
+  className='w-full aspect-video rounded-xl'
+  src='https://www.youtube.com/embed/s2wSZ64Esuo'
+  title='YouTube video player'
+  frameBorder='0'
+  allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture'
+  allowFullScreen
+></iframe>
