Updated sendgrid video

--- a/integrations/email/sendgrid/sendgrid-setup.mdx
+++ b/integrations/email/sendgrid/sendgrid-setup.mdx
@@ -56,7 +56,14 @@ Domain authentication ensures your emails are trusted and not flagged as spam. I
   </Step>
 </Steps>
 
-## <iframe title="vimeo-player" src="https://player.vimeo.com/video/265066856?h=ce249456a7" width="640" height="360" frameborder="0" referrerpolicy="strict-origin-when-cross-origin" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"   allowfullscreen></iframe>
+<iframe
+  className='w-full aspect-video rounded-xl'
+  src='https://www.youtube.com/embed/gEu6gcZFVxs'
+  title='YouTube video player'
+  frameBorder='0'
+  allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture'
+  allowFullScreen
+></iframe>
 
 ## 3. Generate an API Key
 
