Add documentation for integrating Central Dispatch with BeRocker CRM

--- a/index.mdx
+++ b/index.mdx
@@ -42,7 +42,7 @@ Here, you’ll find everything you need to **get started, configure your integra
 
 ## Load Boards
 
-- [Configure Central Dispatch User Settings](/integrations/loadboards/configure-central-dispatch-user-settings-in-berocker-crm)
+- [Central Dispatch](/integrations/loadboards/centraldispatch)
 - [Configure Super Dispatch API](integrations/loadboards/how-to-configure-super-dispatch-api-integration-settings)
 
 ---
