--- a/integrations/loadboards/centraldispatch.mdx
+++ b/integrations/loadboards/centraldispatch.mdx
@@ -7,7 +7,14 @@ created_at: '2025-06-29T06:53:03.017357+00:00'
 updated_at: '2026-02-16T00:00:00.000+00:00'
 ---
 
+![Central Dispatch Integration Banner](/images/cd/berocker_cd_.jpeg)
+
 Central Dispatch can be connected to BeRocker in just a few steps so your team can start posting loads directly from the CRM.
+
+<Note>
+  We value the work Central Dispatch does for the industry and are proud to integrate with their
+  platform.
+</Note>
 
 ## Before You Start
 
@@ -50,10 +57,12 @@ Make sure your Central Dispatch account is on the **Premium** plan.
   </Step>
 </Steps>
 
-<Note>
-  We value the work Central Dispatch does for the industry and are proud to integrate with their
-  platform.
-</Note>
+## Central Dispatch Support
+
+If you encounter any issues with Central Dispatch or are interested in an Enterprise solution, contact the Central Dispatch team directly:
+
+- Phone: `800-928-7869`
+- Enterprise inquiries: [Fill out their contact form](https://www.centraldispatch.com/contact-us) to receive a response within 1-2 business days.
 
 ## Need Help?
 
